# MiniChatTest

./: README.md
client/: CMakeLists.txt  chatmsgitem.cpp  chatmsgitem.h  chatmsgitem.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netmgr.cpp  netmgr.h
server/: CMakeLists.txt  CMakeSettings.json  chat.sql  createResourcesLink.bat  vcpkg.json
server/Resources/: main.lua
server/Resources/lualib/: class.lua  luaApi.lua  mariadb.lua  tcpServer.lua
server/Resources/services/chat/: chatRegister.lua  chatServ.lua  main.lua
server/Resources/services/define/: LoginDefine.lua
server/Resources/services/sql/: main.lua  sqlRegister.lua  sqlServ.lua
server/src/: main.cpp
server/src/json/: json.cpp
server/src/lua/: luaApi.cpp  luaApi.hpp
server/src/msg/: msg.cpp  msg.hpp
server/src/queue/: threadQueue.hpp
server/src/service/: luaService.cpp  service.cpp  service.hpp  serviceMgr.cpp  serviceMgr.hpp
server/src/socket/session/: tcpServerSession.cpp  tcpServerSession.hpp
server/src/socket/tcp/: luaTcpServer.cpp  tcpServer.cpp  tcpServer.hpp  tcpServerMgr.cpp  tcpServerMgr.hpp
server/src/sql/mariadb/: mariadb.cpp
